
Bug Fixes:

- Fixed City Built event
- Changed Scoreboard items (WHEOOH, Number of Cities) so that they are optional
- HotSeat
	Strategy Layer is hidden while switching players
	Civ4lerts and Reminders no longer show up while switching players
	Civ4lerts now fire for all human players
	Reminders that fired this turn no longer show in End Turn Text for next player
- Sevopedia now opens from MAIN MENU without loading or starting a game


MODDING

New Features:

- BugDll module for creating Python features that depend on the DLL but work gracefully without it
- Added "dll" attribute to <mod>, <option>, <list>, <init>, <event>, <events> and <shortcut>
	The <mod>, <option> and <list> elements are still created but marked if the DLL isn't the correct version; the others are ignored
- DealUtil
	Deal class has new CvDeal functions, plus more
	Added several helpful module functions for testing TradeableItems values
- Exposed and/or replicated several CvDeal functions in DealUtil.Deal:
	bool isCancelable(PlayerTypes eByPlayer, bool bIgnoreWaitingPeriod=False)
	wstring getCannotCancelReason(PlayerTypes eByPlayer)
	int turnsToCancel(PlayerTypes eByPlayer)
- Events
	SwitchHotSeatPlayer(PlayerTypes ePlayer)
	unitUpgraded(CyUnit pOldUnit, CyUnit pNewUnit, int iCost) [BULL]
	combatWithdrawal(CyUnit pAttacker, CyUnit pDefender) [BULL]
	combatRetreat(CyUnit pAttacker, CyUnit pDefender) [BULL]
	combatLogCollateral(CyUnit pAttacker, CyUnit pDefender, int iDamage) [BULL]
	combatLogFlanking(CyUnit pAttacker, CyUnit pDefender, int iDamage) [BULL]
- BugUtil
	getText() and getPlainText() both replace [ICON_XXX] in the message
	Added deferCall() to call a function in a future gameUpdate event after an optional delay
	Added alertInput() and alertInputFlags() that print to the screen using alert() instead of debug()
- CvUtil
	Added CvUtil.getNewScreenID() so mods don't have to hard-code screen IDs

Bug Fixes:
