@@ -45,12 +45,18 @@
 	
 	<init/>
 	
+	<!-- Loading and Saving -->
 	<event type="GameStart" function="onGameStart"/>
 	<event type="OnLoad" function="onLoad"/>
 	<event type="PythonReloaded" function="onLoad"/>
 	<event type="OnPreSave" function="onPreSave"/>
+	
+	<!-- Hiding/Showing During HotSeat Games -->
 	<event type="BeginActivePlayerTurn" function="onBeginActivePlayerTurn"/>
 	<event type="SwitchHotSeatPlayer" function="onSwitchHotSeatPlayer"/>
+	
+	<!-- Interacting -->
+	<event type="ModNetMessage" function="onModNetMessage"/>
 	
 	<shortcut key="Ctrl X | Ctrl F10" function="toggleDotMapVisibility"/>
 	<shortcut key="Alt X | Alt F10" function="toggleDotMapEditMode"/>
